update refresh token, add reset password login with email, add new endpoints

--- a/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
+++ b/AngularAuthUI/src/app/components/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
     <div class="navbar-nav">
         <div class="nav-item text-nowrap">
             <a style="background: red;
-            color: #fff;
-            border-radius: 4px;
-            margin: 10px;" class="nav-link px-3 cursor-pointer" (click)="logOut()">Sign out</a>
+                color: #fff;
+                border-radius: 4px;
+                margin: 10px; cursor: pointer;" class="nav-link px-3" (click)="logOut()">Sign out</a>
         </div>
     </div>
 </header>
